<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">1657655881119130</string>

    <string name="app_name">GeoQuest</string>
    <string name="All">All</string>
    <string name="number">1</string>
    <string name="action_menu">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Ajuda</string>
    <string name="action_logout">Sair</string>
    <string name="action_credits">Créditos</string>
    <string name="searchEmptyInput">Buscar amigo</string>
    <string name="title_activity_help">Ajuda</string>
    <string name="title_activity_credits">Créditos</string>
    <string name="title_activity_login">Login</string>
	<string name="insideAbout">Sobre o Geoquest</string>
	<string name="insidehowWorks">Como Funciona?</string>
	<string name="insidereportProblems">Reportar Problemas</string>
	<string name="insideAboutText">O Geoquest é bem legal uhuuuuu, eu amo o geoquest demais, melhor app</string>
	<string name="insideWorksText">Eh um joguinho que vc responde as perguntas e pronto</string>
	<string name="insideReportText">Teve pro no app? Mande e-mail para a gnt</string>
	<string name="Empty"></string>
    <string name="Nome">Tomer Simis</string>
    <string name="areasParaJogar">Escolha uma área para jogar</string>
    <string name="ranking">RANKING DOS AMIGOS</string>
	<string name="statistics">MINHAS ESTATÍSTICAS</string>
	<string name="myBadges">MEUS BADGES</string>
	<string name="play">JOGAR</string>
	<string name="nextQuestion">PRÓXIMA QUESTÃO</string>
	<string name="resultQuestion">RESPOSTA CERTA</string>
	<string name="answerDesc">Parabéns, você está indo muito bem. Continue arrasando!</string>
    <string name="rankingPositionDesc">no ranking de amigos.</string>
    <string name="favoriteAreaDesc">é sua área favorita.</string>
    <string name="jogoConcluido"> do jogo concluído</string>
    <string name="endQuestionsText">Parabéns! Você concluiu todas as questões. O que deseja fazer agora?</string>
    <string name="refazerQuestoesText">Refazer questões</string>
    <string name="retornarMenuText">Retornar ao menu principal</string>
    <string name="base_url">https://geoquest-backend.herokuapp.com/api/</string>
    <string name="facebook_auth_url">https://geoquest.herokuapp.com/rest-auth/facebook/</string>
    <string name="statistics_url">https://geoquest.herokuapp.com/statistics/</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
