<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/answerResultLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:background="@color/green"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/answerSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/check" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView 
            android:id="@+id/answerDialogResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultQuestion"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            />
        
         <TextView 
            android:id="@+id/answerDialogDesc" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answerDesc"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:textColor="@color/green"
            android:layout_marginBottom="10dp"
            />
        
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/next_question"
            android:padding="0dp"
            android:text="@string/nextQuestion"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>