<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2.005" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp" >

            <TextView
                android:id="@+id/rankingPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rankingPosition"
                android:textColor="@color/abc_primary_text_material_light"
                android:text="@string/rankingPositionDesc" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.005"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp" >

            <TextView
                android:id="@+id/favoriteArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/favoriteArea"
                android:textColor="@color/abc_primary_text_material_light"
                android:text="@string/favoriteAreaDesc" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp" >

        <RelativeLayout
            android:id="@+id/layoutProgressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ProgressBar
                android:id="@+id/progressBarPercentageCompleted"
                style="@style/CustomProgressBarHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:max="100"
                android:progress="0" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/progressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/progressBarText"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:text="@string/jogoConcluido"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </RelativeLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/listViewStats"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>