<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    android:id="@+id/mainFragment">

    <RelativeLayout
        android:id="@+id/UserInfos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.75"
        android:background="@color/orange"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/background">

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp" 
                >               
                
                <ImageView
                android:id="@+id/imgUserPerfil"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/asset_avatar"
                    android:background="@drawable/border_image"
                    android:padding="3dp" />

            </RelativeLayout>
          

            <TextView
                android:id="@+id/nameUserPerfil"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="0dp"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/linearLayoutStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/star" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/UserInfos"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="3" >

        <RelativeLayout
            android:id="@+id/layoutRanking"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/brown"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/rankingIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_friends" />

            <TextView
                android:id="@+id/rankingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/rankingIcon"
                android:text="@string/ranking"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/rankingIcon"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutEstatisticas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/salmon"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/estatisticasIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_stats" />

            <TextView
                android:id="@+id/estatisticasTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/estatisticasIcon"
                android:text="@string/statistics"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ImageView
                android:id="@id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/estatisticasIcon"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutMeusBadges"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/layoutEstatisticas"
            android:layout_weight="1"
            android:background="@drawable/green"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <ImageView
                android:id="@+id/meusBadgesIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_badges" />

            <TextView
                android:id="@+id/meusBadgesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/meusBadgesIcon"
                android:text="@string/myBadges"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <ImageView
                android:id="@id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/meusBadgesIcon"
                android:src="@drawable/arrow" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_weight="1.25"
        android:background="@drawable/blue"
        android:padding="0dp"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="22sp" />

</LinearLayout>